plugins {
    id 'java'
    id 'war'
}

group 'com.ffhs'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
//    maven {
//        url "https://repo.maven.apache.org/maven2/"
//    }
}

ext {
    junitVersion = '5.9.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly('jakarta.platform:jakarta.jakartaee-web-api:10.0.0')

    testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.0")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.0")
    testImplementation("org.mockito:mockito-core:4.8.1")

    implementation 'org.postgresql:postgresql:42.6.0'
    implementation 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

//    implementation 'org.primefaces:primefaces-jakarta:13.0.2'
    implementation 'org.primefaces:primefaces:13.0.2:jakarta'
    implementation 'org.webjars.npm:primeflex:3.3.1'
//    implementation 'org.primefaces:primefaces-jakarta:10.0.0'

    implementation 'org.mindrot:jbcrypt:0.4'

    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'ch.qos.logback:logback-classic:1.4.6'
    implementation 'ch.qos.logback:logback-core:1.4.6'

//    implementation 'org.hibernate:hibernate-annotations:3.5.6-Final'

    implementation 'org.modelmapper:modelmapper:3.2.0'
}

test {
    useJUnitPlatform()
}